maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:9: error: not found: value a
      a = random3();
      ^RandomMouseMaze:10: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
      if (estFaceMur == false && a = 0) {
                              ^RandomMouseMaze:10: error: not found: value a
      if (estFaceMur == false && a = 0) {
                                 ^RandomMouseMaze:12: error: not found: value a
      } else if (a = 1) {
                 ^