maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here
  
  def biscuitLabyrinthe () {
    
    while (estSurBiscuit() == false) {
      
      a = random3();
      if (estFaceMur == false && a = 0) {
        avance();
      } else if (a = 1) {
        droite();
      } else {
        gauche();
      }
    }
    prendBiscuit();
  
  }
  
biscuitLabyrinthe();
  
}